# finance-advisor

./: .env.example  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  idea.features.md  idea.features.mvp.stage_1.md  idea.features.mvp.stage_2.md  idea.md  llm-limitations-explained.md  main.py  manage.py  pyproject.toml
advisor/: constants.py  data_models.py  dependencies.py  lifespan.py  models.py  services.py  settings.py
advisor/api/: __init__.py
advisor/api/v1/: api.py  finances.py  transactions.py
advisor/db/: db_async_connector.py  db_models.py
advisor/ingestion/: base_parser.py  csv_parser.py  factory.py
advisor/llm/: lite_llm_client.py  llm_output_parser.py  llm_service.py  metrics_collector.py  prompt_manager.py
advisor/service/: budgets_service.py  category_service.py  finances_service.py  transactions_service.py
advisor/service/conversations/: base_intent_handler.py  conversation_orchestrator.py
advisor/service/conversations/intent_handlers/: add_transaction_intent_data.py  add_transaction_intent_handler.py  add_transaction_intent_result.py  base_intent_data.py  intent_handler_mapper.py
advisor/utils/: calculation_utils.py  file_utils.py
cli_scripts/: format.ps1  test.ps1
migrations/: env.py
migrations/versions/: 2026-01-13_ac3c23337782-initial_setup.py  2026-01-26_d7ebcb5331dc-alter_normalized_transactions_make_reccurance_period_nullable.py  2026-01-28_79b47cd7af43-create_global_category_table.py  2026-01-29_0597e9d3b1ab-alter_financial_snapshot_columns.py
prompts/categorize_transaction_system/: v1.md
prompts/categorize_transaction_user/: v1.md
prompts/define_user_intent_system/: v1.md
prompts/define_user_intent_user/: v1.md
prompts/normalize_transaction_system/: v1.md
prompts/normalize_transaction_user/: v1.md
prompts/prepare_add_transaction_intent_data_system/: v1.md
prompts/prepare_add_transaction_intent_data_user/: v1.md
tests/: db_test_helper.py  test_csv_parser.py
tests/resources/: invalid_no_required_columns.csv  partial_columns.csv  valid_transactions.csv  valid_transactions_positive_amount.csv
tests/v1/: test_transactions_api.py
