[project]
name = "job-advisor"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.12.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.10",
    "alembic>=1.13.0",
    "python-multipart>=0.0.9",
]

[dependency-groups]
format = [
    "black",
    "isort",
    "mypy"
]
test = [
    "pytest-cov",
    "aiosqlite",
    "types-requests>=2.31.0.6",
    "parameterized==0.9.0",
]
dev = [
    { include-group = "format" },
    { include-group = "test" },
    "alembic>=1.14.0",
]

[tool.isort]
profile = "black"

[tool.mypy]
plugins = [
    "pydantic.mypy"
]
python_version = "3.13"
strict = true
ignore_missing_imports = true
exclude = [
    "^tests/",
    "^alembic/",
    "^cli_scripts/",
    "^dev/",
    "tests/",
]

[tool.black]
line-length = 120
target-version = ["py313"]
extend-exclude = "/(dev|cli_scripts|alembic)/"

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_requried_dynamic_aliases = true
warn_untyped_fields = true

[tool.coverage.run]
omit = [
    "__init__.py",
    "tests/*",
]


[tool.ruff]
ine-length = 120
select = ["E", "W", "F"] # pycodestyle (E/W) + pyflakes (F)
ignore = []