[project]
name = "finance-advisor"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.12.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.10",
    "python-multipart>=0.0.9",
    "litellm>=1.80.16",
    "jinja2>=3.1.6",
    "instructor>=1.14.3",
    "alembic>=1.18.1",
    "openai>=1.50.0",
]

[dependency-groups]
format = [
    "black",
    "isort",
    "mypy"
]
test = [
    "pytest-cov",
    "aiosqlite",
    "types-requests>=2.31.0.6",
    "parameterized==0.9.0",
]
dev = [
    { include-group = "format" },
    { include-group = "test" },
    "alembic>=1.14.0",
    "pipdeptree>=2.30.0",
]

[tool.isort]
profile = "black"
skip = [".venv", ".mypy_cache", ".cache", ".git", "prompts", "migrations", "cli_scripts", "htmlcov"]
skip_gitignore = true

[tool.mypy]
plugins = [
    "pydantic.mypy"
]
python_version = "3.13"
strict = true
ignore_missing_imports = true
exclude = '^(tests|migrations|cli_scripts|prompts|dev)/|manage\.py|^\.venv/'

[tool.black]
line-length = 120
target-version = ["py313"]
exclude = '''
/(
    \.venv
  | \.mypy_cache
  | \.cache
  | cli_scripts
  | migrations
  | dev
  | prompts
  | \.git
)/
'''

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_requried_dynamic_aliases = true
warn_untyped_fields = true

[tool.coverage.run]
omit = [
    "__init__.py",
    "tests/*",
    "manage.py",
    "lifespan"
]


[tool.ruff]
ine-length = 120
select = ["E", "W", "F"] # pycodestyle (E/W) + pyflakes (F)
ignore = []
